전력 사용량, 코스피 지수 평균 시각화

--- a/project_2_file/z_ssh/data/코스피 데이터/코스피.ipynb
+++ b/project_2_file/z_ssh/data/코스피 데이터/코스피.ipynb
@@ -1963,6 +1963,473 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>코스피 평균</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1682.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1598.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1665.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1730.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1648.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2479.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2333.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2230.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2417.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2361.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>156 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       연도   월   코스피 평균\n",
+       "0    2010   1  1682.16\n",
+       "1    2010   2  1598.96\n",
+       "2    2010   3  1665.50\n",
+       "3    2010   4  1730.29\n",
+       "4    2010   5  1648.30\n",
+       "..    ...  ..      ...\n",
+       "151  2022   8  2479.57\n",
+       "152  2022   9  2333.93\n",
+       "153  2022  10  2230.27\n",
+       "154  2022  11  2417.56\n",
+       "155  2022  12  2361.28\n",
+       "\n",
+       "[156 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df_kospi = pd.read_csv('코스피 지수 데이터.csv')\n",
+    "df_kospi = df_kospi.drop(columns=['Unnamed: 0'])\n",
+    "df_kospi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, 156, 1):\n",
+    "    if df_kospi.loc[i, '월'] == 1:\n",
+    "         df_kospi.loc[i, '월'] = '01'\n",
+    "    elif df_kospi.loc[i, '월'] == 2:\n",
+    "         df_kospi.loc[i, '월'] = '02'\n",
+    "    elif df_kospi.loc[i, '월'] == 3:\n",
+    "         df_kospi.loc[i, '월'] = '03'\n",
+    "    elif df_kospi.loc[i, '월'] == 4:\n",
+    "         df_kospi.loc[i, '월'] = '04'\n",
+    "    elif df_kospi.loc[i, '월'] == 5:\n",
+    "         df_kospi.loc[i, '월'] = '05'\n",
+    "    elif df_kospi.loc[i, '월'] == 6:\n",
+    "         df_kospi.loc[i, '월'] = '06'\n",
+    "    elif df_kospi.loc[i, '월'] == 7:\n",
+    "         df_kospi.loc[i, '월'] = '07'\n",
+    "    elif df_kospi.loc[i, '월'] == 8:\n",
+    "         df_kospi.loc[i, '월'] = '08'\n",
+    "    elif df_kospi.loc[i, '월'] == 9:\n",
+    "         df_kospi.loc[i, '월'] = '09'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>코스피 평균</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "      <td>1682.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>02</td>\n",
+       "      <td>1598.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>03</td>\n",
+       "      <td>1665.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>04</td>\n",
+       "      <td>1730.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>05</td>\n",
+       "      <td>1648.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>08</td>\n",
+       "      <td>2479.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>09</td>\n",
+       "      <td>2333.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2230.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2417.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2361.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>156 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       연도   월   코스피 평균\n",
+       "0    2010  01  1682.16\n",
+       "1    2010  02  1598.96\n",
+       "2    2010  03  1665.50\n",
+       "3    2010  04  1730.29\n",
+       "4    2010  05  1648.30\n",
+       "..    ...  ..      ...\n",
+       "151  2022  08  2479.57\n",
+       "152  2022  09  2333.93\n",
+       "153  2022  10  2230.27\n",
+       "154  2022  11  2417.56\n",
+       "155  2022  12  2361.28\n",
+       "\n",
+       "[156 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_kospi[['연도', '월']] = df_kospi[['연도', '월']].astype(str)\n",
+    "df_kospi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 156 entries, 0 to 155\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   연도      156 non-null    object \n",
+      " 1   월       156 non-null    object \n",
+      " 2   코스피 평균  156 non-null    float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 3.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_kospi.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>년월</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>코스피 평균</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010_01</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>01</td>\n",
+       "      <td>1682.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010_02</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>02</td>\n",
+       "      <td>1598.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010_03</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>03</td>\n",
+       "      <td>1665.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010_04</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>04</td>\n",
+       "      <td>1730.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010_05</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>05</td>\n",
+       "      <td>1648.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>2022_08</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>08</td>\n",
+       "      <td>2479.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>2022_09</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>09</td>\n",
+       "      <td>2333.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2022_10</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2230.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>2022_11</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2417.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>2022_12</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2361.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>156 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          년월    연도   월   코스피 평균\n",
+       "0    2010_01  2010  01  1682.16\n",
+       "1    2010_02  2010  02  1598.96\n",
+       "2    2010_03  2010  03  1665.50\n",
+       "3    2010_04  2010  04  1730.29\n",
+       "4    2010_05  2010  05  1648.30\n",
+       "..       ...   ...  ..      ...\n",
+       "151  2022_08  2022  08  2479.57\n",
+       "152  2022_09  2022  09  2333.93\n",
+       "153  2022_10  2022  10  2230.27\n",
+       "154  2022_11  2022  11  2417.56\n",
+       "155  2022_12  2022  12  2361.28\n",
+       "\n",
+       "[156 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_kospi['년월'] = df_kospi['연도'] + \"_\" + df_kospi['월']\n",
+    "df_kospi = df_kospi[['년월', '연도', '월', '코스피 평균']]\n",
+    "df_kospi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_kospi.to_csv('코스피 2차.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
