5/2 김성화 물가지수 그래프 class declare

--- a/project_2_file/Sunghwa/03_Data_Analysis/[경제]물가지수/2차_물가지수_그래프.ipynb
+++ b/project_2_file/Sunghwa/03_Data_Analysis/[경제]물가지수/2차_물가지수_그래프.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['font.family'] = 'Malgun Gothic'  \n",
+    "plt.rcParams['font.family'] = 'D2Coding'  \n",
     "plt.rcParams['font.size'] = 15\n",
     "plt.rcParams['axes.unicode_minus']=False"
    ]
