5/2 김성화 입국관광객 그래프

--- a/project_2_file/Sunghwa/03_Data_Analysis/[경제]물가지수/물가지수_지도_연습.ipynb
+++ b/project_2_file/Sunghwa/03_Data_Analysis/[경제]물가지수/물가지수_지도_연습.ipynb
@@ -46,7 +46,7 @@
     "### 물가지수 데이터 DataFrame으로 Load\n",
     "# 세종특별자치시의 일정 기간은 - 으로 처리되어 있음을 확인 가능(그래프 관련 ipynb 파일에서는 이를 다룸).\n",
     "\n",
-    "df_1 = pd.read_csv(\"/self/201001_202112_월별_시도별_소비자물가지수.csv\", encoding=\"cp949\")\n",
+    "df_1 = pd.read_csv(\"201001_202112_월별_시도별_소비자물가지수.csv\", encoding=\"cp949\")\n",
     "df_1.columns"
    ]
   },
