완성본 폴더 생성

--- a/project_2_file/z_ssh/완성본/전력_사용량_정제.ipynb
+++ b/project_2_file/z_ssh/완성본/전력_사용량_정제.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,22 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2010 = pd.read_excel(\"시군구별 전력사용량(2010년).xlsx\")\n",
-    "df2011 = pd.read_excel(\"시군구별 전력사용량(2011년).xlsx\")\n",
-    "df2012 = pd.read_excel(\"시군구별 전력사용량(2012년).xlsx\")\n",
-    "df2013 = pd.read_excel(\"시군구별 전력사용량(2013년).xlsx\")\n",
-    "df2014 = pd.read_excel(\"150128 시군구별 전력사용량(2014년 1월~12월).xlsx\")\n",
-    "df2015 = pd.read_excel(\"시군구별 전력사용량(2015년 12월).xlsx\")\n",
-    "df2016 = pd.read_excel(\"시군구별 전력사용량(2016년 12월).xlsx\")\n",
-    "df2017 = pd.read_excel(\"8.시군구별 전력사용량(홈페이지 게시용)_201712.xlsx\")\n",
-    "df2018 = pd.read_excel(\"8.시군구별 전력사용량(홈페이지 게시용)_201812.xlsx\")\n",
-    "df2019 = pd.read_excel(\"(2019)시군구별 전력사용량.xlsx\")\n",
-    "df2020 = pd.read_excel(\"시군구별 전력사용량(홈페이지 게시용)_202012.xlsx\")\n",
-    "df2021 = pd.read_excel(\"8.시군구별 전력사용량(홈페이지 게시용)_202112.xlsx\")\n",
+    "df2010 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2010년).xlsx\")\n",
+    "df2011 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2011년).xlsx\")\n",
+    "df2012 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2012년).xlsx\")\n",
+    "df2013 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2013년).xlsx\")\n",
+    "df2014 = pd.read_excel(\"./전력_사용량_원_데이터/150128 시군구별 전력사용량(2014년 1월~12월).xlsx\")\n",
+    "df2015 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2015년 12월).xlsx\")\n",
+    "df2016 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(2016년 12월).xlsx\")\n",
+    "df2017 = pd.read_excel(\"./전력_사용량_원_데이터/8.시군구별 전력사용량(홈페이지 게시용)_201712.xlsx\")\n",
+    "df2018 = pd.read_excel(\"./전력_사용량_원_데이터/8.시군구별 전력사용량(홈페이지 게시용)_201812.xlsx\")\n",
+    "df2019 = pd.read_excel(\"./전력_사용량_원_데이터/(2019)시군구별 전력사용량.xlsx\")\n",
+    "df2020 = pd.read_excel(\"./전력_사용량_원_데이터/시군구별 전력사용량(홈페이지 게시용)_202012.xlsx\")\n",
+    "df2021 = pd.read_excel(\"./전력_사용량_원_데이터/8.시군구별 전력사용량(홈페이지 게시용)_202112.xlsx\")\n",
     "\n",
     "df2010 = col_change(df2010).reset_index()\n",
     "df2011 = col_change(df2011).reset_index()\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "[22080 rows x 17 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "[21976 rows x 17 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "[1832 rows x 17 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
        "[2748 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,17 +1397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('전력 사용량 12차.csv')"
+    "df = pd.read_csv('./전력_사용량_원_데이터/전력 사용량 12차.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2003,7 @@
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
        "16  2010_1  2010  01     충청북도  1755905"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
