--- a/referenceapp/usage/usage.ipynb
+++ b/referenceapp/usage/usage.ipynb
@@ -302,6 +302,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>년월</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>시도</th>\n",
+       "      <th>사용량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010_1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>강원도</td>\n",
+       "      <td>1480180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010_1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>8725482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010_1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>2922775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010_1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>3743904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010_1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>광주광역시</td>\n",
+       "      <td>712924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2256</th>\n",
+       "      <td>2010_12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>전라남도</td>\n",
+       "      <td>2356637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2257</th>\n",
+       "      <td>2010_12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>1757331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2258</th>\n",
+       "      <td>2010_12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>307358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2259</th>\n",
+       "      <td>2010_12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>충청남도</td>\n",
+       "      <td>3622961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2260</th>\n",
+       "      <td>2010_12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>충청북도</td>\n",
+       "      <td>1784532</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>204 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           년월    연도   월       시도      사용량\n",
+       "0      2010_1  2010   1      강원도  1480180\n",
+       "1      2010_1  2010   1      경기도  8725482\n",
+       "2      2010_1  2010   1     경상남도  2922775\n",
+       "3      2010_1  2010   1     경상북도  3743904\n",
+       "4      2010_1  2010   1    광주광역시   712924\n",
+       "...       ...   ...  ..      ...      ...\n",
+       "2256  2010_12  2010  12     전라남도  2356637\n",
+       "2257  2010_12  2010  12     전라북도  1757331\n",
+       "2258  2010_12  2010  12  제주특별자치도   307358\n",
+       "2259  2010_12  2010  12     충청남도  3622961\n",
+       "2260  2010_12  2010  12     충청북도  1784532\n",
+       "\n",
+       "[204 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1.query('연도 == @year')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
