--- a/project_2_file/ay_sprint2/01_pop.ipynb
+++ b/project_2_file/ay_sprint2/01_pop.ipynb
@@ -640,7 +640,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "eeffa877-f307-41a2-b60f-112c9e821a97",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
