--- a/project_2_file/ay_sprint2/04_인구_전력_시각화.ipynb
+++ b/project_2_file/ay_sprint2/04_인구_전력_시각화.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "id": "83bbde91-b861-4388-b21f-42326fc9912b",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "bc198aa1-10b5-4213-b4e9-9a82e489679c",
    "metadata": {},
    "outputs": [],
@@ -49,9 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "cac6089e-47fe-4164-9e6e-4c9f1e46a79d",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -194,7 +198,7 @@
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "1fd6ae99-8441-4990-81d3-8da5cd06f90e",
    "metadata": {},
    "outputs": [
@@ -217,7 +221,7 @@
        "       '경상남도', '제주특별자치도'], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,31 +232,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7bd43340-d890-40bb-a94c-8225b15affb6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "1439e97f-4722-41d4-a456-cd5178d98e72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022]"
+       "array([2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021,\n",
+       "       2022], dtype=int64)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "col2"
+    "df_pop['연도'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1439e97f-4722-41d4-a456-cd5178d98e72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col2=[2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021,\n",
+    "       2022]"
    ]
   },
   {
