--- a/project_2_file/z_ssh/완성본_plotly/전력,코스피_시각화.ipynb
+++ b/project_2_file/z_ssh/완성본_plotly/전력,코스피_시각화.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -985,9 +985,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "sprint_kernel",
    "language": "python",
-   "name": "python3"
+   "name": "sprint2"
   },
   "language_info": {
    "codemirror_mode": {
