--- a/project_2_file/z_ssh/고용율/고용율.ipynb
+++ b/project_2_file/z_ssh/고용율/고용율.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "[2652 rows x 5 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ssh\\AppData\\Local\\Temp\\ipykernel_18664\\2072271129.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\ssh\\AppData\\Local\\Temp\\ipykernel_15260\\2072271129.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  df['연월'] = df['연월'].str.replace('.', '_')\n"
      ]
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "[2652 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_u = pd.read_csv('전력사용량,코스피.csv')\n",
-    "df_u = df_u.drop(columns=['Unnamed: 0', '사용량'])"
+    "df_u = df_u.drop(columns=['Unnamed: 0', '코스피 평균'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "      <th>년월</th>\n",
        "      <th>연도</th>\n",
        "      <th>월</th>\n",
-       "      <th>코스피 평균</th>\n",
+       "      <th>사용량</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -420,35 +420,35 @@
        "      <td>2010_01</td>\n",
        "      <td>2010</td>\n",
        "      <td>1</td>\n",
-       "      <td>1682.16</td>\n",
+       "      <td>39696747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2010_02</td>\n",
        "      <td>2010</td>\n",
        "      <td>2</td>\n",
-       "      <td>1598.96</td>\n",
+       "      <td>37208030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2010_03</td>\n",
        "      <td>2010</td>\n",
        "      <td>3</td>\n",
-       "      <td>1665.50</td>\n",
+       "      <td>35554125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2010_04</td>\n",
        "      <td>2010</td>\n",
        "      <td>4</td>\n",
-       "      <td>1730.29</td>\n",
+       "      <td>35968361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2010_05</td>\n",
        "      <td>2010</td>\n",
        "      <td>5</td>\n",
-       "      <td>1648.30</td>\n",
+       "      <td>33809235</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -462,35 +462,35 @@
        "      <td>2021_08</td>\n",
        "      <td>2021</td>\n",
        "      <td>8</td>\n",
-       "      <td>3182.50</td>\n",
+       "      <td>48929956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
        "      <td>2021_09</td>\n",
        "      <td>2021</td>\n",
        "      <td>9</td>\n",
-       "      <td>3141.70</td>\n",
+       "      <td>44818884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>141</th>\n",
        "      <td>2021_10</td>\n",
        "      <td>2021</td>\n",
        "      <td>10</td>\n",
-       "      <td>2989.87</td>\n",
+       "      <td>41838223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
        "      <td>2021_11</td>\n",
        "      <td>2021</td>\n",
        "      <td>11</td>\n",
-       "      <td>2964.30</td>\n",
+       "      <td>42829617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
        "      <td>2021_12</td>\n",
        "      <td>2021</td>\n",
        "      <td>12</td>\n",
-       "      <td>2988.49</td>\n",
+       "      <td>47250619</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -498,29 +498,335 @@
        "</div>"
       ],
       "text/plain": [
-       "          년월    연도   월   코스피 평균\n",
-       "0    2010_01  2010   1  1682.16\n",
-       "1    2010_02  2010   2  1598.96\n",
-       "2    2010_03  2010   3  1665.50\n",
-       "3    2010_04  2010   4  1730.29\n",
-       "4    2010_05  2010   5  1648.30\n",
-       "..       ...   ...  ..      ...\n",
-       "139  2021_08  2021   8  3182.50\n",
-       "140  2021_09  2021   9  3141.70\n",
-       "141  2021_10  2021  10  2989.87\n",
-       "142  2021_11  2021  11  2964.30\n",
-       "143  2021_12  2021  12  2988.49\n",
+       "          년월    연도   월       사용량\n",
+       "0    2010_01  2010   1  39696747\n",
+       "1    2010_02  2010   2  37208030\n",
+       "2    2010_03  2010   3  35554125\n",
+       "3    2010_04  2010   4  35968361\n",
+       "4    2010_05  2010   5  33809235\n",
+       "..       ...   ...  ..       ...\n",
+       "139  2021_08  2021   8  48929956\n",
+       "140  2021_09  2021   9  44818884\n",
+       "141  2021_10  2021  10  41838223\n",
+       "142  2021_11  2021  11  42829617\n",
+       "143  2021_12  2021  12  47250619\n",
        "\n",
        "[144 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df[df['연도'] != 2022]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df_test.groupby(['연월'])[['고용률']].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연월</th>\n",
+       "      <th>고용률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010_01</td>\n",
+       "      <td>904.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010_02</td>\n",
+       "      <td>905.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010_03</td>\n",
+       "      <td>928.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010_04</td>\n",
+       "      <td>951.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010_05</td>\n",
+       "      <td>966.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>2021_08</td>\n",
+       "      <td>1052.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>2021_09</td>\n",
+       "      <td>1054.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>2021_10</td>\n",
+       "      <td>1056.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2021_11</td>\n",
+       "      <td>1054.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>2021_12</td>\n",
+       "      <td>1025.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          연월     고용률\n",
+       "0    2010_01   904.9\n",
+       "1    2010_02   905.6\n",
+       "2    2010_03   928.2\n",
+       "3    2010_04   951.3\n",
+       "4    2010_05   966.8\n",
+       "..       ...     ...\n",
+       "139  2021_08  1052.8\n",
+       "140  2021_09  1054.6\n",
+       "141  2021_10  1056.3\n",
+       "142  2021_11  1054.6\n",
+       "143  2021_12  1025.5\n",
+       "\n",
+       "[144 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_u['고용률'] = df_test['고용률']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>년월</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>사용량</th>\n",
+       "      <th>고용률</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010_01</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39696747</td>\n",
+       "      <td>904.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010_02</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37208030</td>\n",
+       "      <td>905.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010_03</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35554125</td>\n",
+       "      <td>928.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010_04</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "      <td>35968361</td>\n",
+       "      <td>951.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010_05</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33809235</td>\n",
+       "      <td>966.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>2021_08</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>8</td>\n",
+       "      <td>48929956</td>\n",
+       "      <td>1052.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>2021_09</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "      <td>44818884</td>\n",
+       "      <td>1054.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>2021_10</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>10</td>\n",
+       "      <td>41838223</td>\n",
+       "      <td>1056.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2021_11</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>11</td>\n",
+       "      <td>42829617</td>\n",
+       "      <td>1054.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>2021_12</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>47250619</td>\n",
+       "      <td>1025.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          년월    연도   월       사용량     고용률\n",
+       "0    2010_01  2010   1  39696747   904.9\n",
+       "1    2010_02  2010   2  37208030   905.6\n",
+       "2    2010_03  2010   3  35554125   928.2\n",
+       "3    2010_04  2010   4  35968361   951.3\n",
+       "4    2010_05  2010   5  33809235   966.8\n",
+       "..       ...   ...  ..       ...     ...\n",
+       "139  2021_08  2021   8  48929956  1052.8\n",
+       "140  2021_09  2021   9  44818884  1054.6\n",
+       "141  2021_10  2021  10  41838223  1056.3\n",
+       "142  2021_11  2021  11  42829617  1054.6\n",
+       "143  2021_12  2021  12  47250619  1025.5\n",
+       "\n",
+       "[144 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_u.to_csv('고용율_그래프용.csv')"
    ]
   },
   {
